added getting facts
